src/core/msmartsParse.output
Terminals which are not used

   APEndOfLine
   APDoubleBond
   APError
   APNegativeFormalCharge
   APPositiveFormalCharge
   APTotalBondNumber
   APTotalExplicitBondNumber


Grammar

    0 $accept: input $end

    1 input: chemInfo

    2 chemInfo: /* empty */
    3         | atomTest
    4         | atomTest chain

    5 chain: bondAtomTest chain
    6      | branch chain
    7      | bondAtomTest
    8      | branch

    9 bondAtomTest: APBond atomTest
   10             | atomTest

   11 acyclicAtomTest: APOpenBracket logOp APCloseBracket
   12                | APOrganicElement
   13                | recursiveChemInfo

   14 atomTest: acyclicAtomTest APNumber
   15         | acyclicAtomTest

   16 branch: APOpenParenthesis chain APCloseParenthesis

   17 atomPrimativeTest: APWildCard
   18                  | APDegree
   19                  | APDegree intNumber
   20                  | APTotalHCount
   21                  | APTotalHCount intNumber
   22                  | APImplicitHCount
   23                  | APImplicitHCount intNumber
   24                  | APRingTest APNumber
   25                  | APResidueTest APNumber
   26                  | APRingMembershipCount
   27                  | APRingMembershipCount intNumber
   28                  | APRingSize
   29                  | APRingSize intNumber
   30                  | APValence
   31                  | APValence intNumber
   32                  | APConnectivity
   33                  | APConnectivity intNumber
   34                  | APGroupNumber intNumber
   35                  | APElectronegativeElement
   36                  | APHeavyAtomTotalBond
   37                  | APHeavyAtomTotalBond intNumber
   38                  | APNegativeCharge intNumber
   39                  | APNegativeCharge
   40                  | APNegativeCharge APNegativeCharge
   41                  | APNegativeCharge APNegativeCharge APNegativeCharge
   42                  | APPositiveCharge intNumber
   43                  | APPositiveCharge
   44                  | APPositiveCharge APPositiveCharge
   45                  | APPositiveCharge APPositiveCharge APPositiveCharge
   46                  | APTransitionMetal intNumber
   47                  | APAromaticPiElectron intNumber
   48                  | APPiBondOrbital
   49                  | APAtomicNumber intNumber
   50                  | APChiralityAntiClockwise
   51                  | APChiralityClockwise
   52                  | intNumber
   53                  | APOrganicElement
   54                  | APInorganicElement
   55                  | APLonePair
   56                  | APLonePair intNumber
   57                  | recursiveChemInfo

   58 logOp: atomPrimativeTest
   59      | APOperatorNot logOp
   60      | logOp APOperatorAndHigh logOp
   61      | logOp APOperatorOr logOp
   62      | logOp APOperatorAndLow logOp

   63 recursiveChemInfo: APDollarSign APOpenParenthesis chemInfo APCloseParenthesis

   64 intNumber: APNumber


Terminals, with rules where they appear

$end (0) 0
error (256)
APEndOfLine (258)
APBond (259) 9
APAtomicNumber (260) 49
APChiralityAntiClockwise (261) 50
APChiralityClockwise (262) 51
APCloseBracket (263) 11
APCloseParenthesis (264) 16 63
APConnectivity (265) 32 33
APDegree (266) 18 19
APRingTest (267) 24
APResidueTest (268) 25
APDollarSign (269) 63
APDoubleBond (270)
APOrganicElement (271) 12 53
APInorganicElement (272) 54
APElectronegativeElement (273) 35
APError (274)
APGroupNumber (275) 34
APHeavyAtomTotalBond (276) 36 37
APImplicitHCount (277) 22 23
APLonePair (278) 55 56
APNegativeCharge (279) 38 39 40 41
APNegativeFormalCharge (280)
APNumber (281) 14 24 25 64
APOpenBracket (282) 11
APOpenParenthesis (283) 16 63
APOperatorAndHigh (284) 60
APOperatorAndLow (285) 62
APOperatorNot (286) 59
APOperatorOr (287) 61
APPiBondOrbital (288) 48
APAromaticPiElectron (289) 47
APPositiveCharge (290) 42 43 44 45
APPositiveFormalCharge (291)
APRingMembershipCount (292) 26 27
APRingSize (293) 28 29
APTotalHCount (294) 20 21
APTotalBondNumber (295)
APTotalExplicitBondNumber (296)
APTransitionMetal (297) 46
APValence (298) 30 31
APWildCard (299) 17


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
input (46)
    on left: 1, on right: 0
chemInfo (47)
    on left: 2 3 4, on right: 1 63
chain (48)
    on left: 5 6 7 8, on right: 4 5 6 16
bondAtomTest (49)
    on left: 9 10, on right: 5 7
acyclicAtomTest (50)
    on left: 11 12 13, on right: 14 15
atomTest (51)
    on left: 14 15, on right: 3 4 9 10
branch (52)
    on left: 16, on right: 6 8
atomPrimativeTest (53)
    on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34
    35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55
    56 57, on right: 58
logOp (54)
    on left: 58 59 60 61 62, on right: 11 59 60 61 62
recursiveChemInfo (55)
    on left: 63, on right: 13 57
intNumber (56)
    on left: 64, on right: 19 21 23 27 29 31 33 34 37 38 42 46 47 49
    52 56


state 0

    0 $accept: . input $end

    APDollarSign      shift, and go to state 1
    APOrganicElement  shift, and go to state 2
    APOpenBracket     shift, and go to state 3

    $default  reduce using rule 2 (chemInfo)

    input              go to state 4
    chemInfo           go to state 5
    acyclicAtomTest    go to state 6
    atomTest           go to state 7
    recursiveChemInfo  go to state 8


state 1

   63 recursiveChemInfo: APDollarSign . APOpenParenthesis chemInfo APCloseParenthesis

    APOpenParenthesis  shift, and go to state 9


state 2

   12 acyclicAtomTest: APOrganicElement .

    $default  reduce using rule 12 (acyclicAtomTest)


state 3

   11 acyclicAtomTest: APOpenBracket . logOp APCloseBracket

    APAtomicNumber            shift, and go to state 10
    APChiralityAntiClockwise  shift, and go to state 11
    APChiralityClockwise      shift, and go to state 12
    APConnectivity            shift, and go to state 13
    APDegree                  shift, and go to state 14
    APRingTest                shift, and go to state 15
    APResidueTest             shift, and go to state 16
    APDollarSign              shift, and go to state 1
    APOrganicElement          shift, and go to state 17
    APInorganicElement        shift, and go to state 18
    APElectronegativeElement  shift, and go to state 19
    APGroupNumber             shift, and go to state 20
    APHeavyAtomTotalBond      shift, and go to state 21
    APImplicitHCount          shift, and go to state 22
    APLonePair                shift, and go to state 23
    APNegativeCharge          shift, and go to state 24
    APNumber                  shift, and go to state 25
    APOperatorNot             shift, and go to state 26
    APPiBondOrbital           shift, and go to state 27
    APAromaticPiElectron      shift, and go to state 28
    APPositiveCharge          shift, and go to state 29
    APRingMembershipCount     shift, and go to state 30
    APRingSize                shift, and go to state 31
    APTotalHCount             shift, and go to state 32
    APTransitionMetal         shift, and go to state 33
    APValence                 shift, and go to state 34
    APWildCard                shift, and go to state 35

    atomPrimativeTest  go to state 36
    logOp              go to state 37
    recursiveChemInfo  go to state 38
    intNumber          go to state 39


state 4

    0 $accept: input . $end

    $end  shift, and go to state 40


state 5

    1 input: chemInfo .

    $default  reduce using rule 1 (input)


state 6

   14 atomTest: acyclicAtomTest . APNumber
   15         | acyclicAtomTest .

    APNumber  shift, and go to state 41

    $default  reduce using rule 15 (atomTest)


state 7

    3 chemInfo: atomTest .
    4         | atomTest . chain

    APBond             shift, and go to state 42
    APDollarSign       shift, and go to state 1
    APOrganicElement   shift, and go to state 2
    APOpenBracket      shift, and go to state 3
    APOpenParenthesis  shift, and go to state 43

    $default  reduce using rule 3 (chemInfo)

    chain              go to state 44
    bondAtomTest       go to state 45
    acyclicAtomTest    go to state 6
    atomTest           go to state 46
    branch             go to state 47
    recursiveChemInfo  go to state 8


state 8

   13 acyclicAtomTest: recursiveChemInfo .

    $default  reduce using rule 13 (acyclicAtomTest)


state 9

   63 recursiveChemInfo: APDollarSign APOpenParenthesis . chemInfo APCloseParenthesis

    APDollarSign      shift, and go to state 1
    APOrganicElement  shift, and go to state 2
    APOpenBracket     shift, and go to state 3

    $default  reduce using rule 2 (chemInfo)

    chemInfo           go to state 48
    acyclicAtomTest    go to state 6
    atomTest           go to state 7
    recursiveChemInfo  go to state 8


state 10

   49 atomPrimativeTest: APAtomicNumber . intNumber

    APNumber  shift, and go to state 25

    intNumber  go to state 49


state 11

   50 atomPrimativeTest: APChiralityAntiClockwise .

    $default  reduce using rule 50 (atomPrimativeTest)


state 12

   51 atomPrimativeTest: APChiralityClockwise .

    $default  reduce using rule 51 (atomPrimativeTest)


state 13

   32 atomPrimativeTest: APConnectivity .
   33                  | APConnectivity . intNumber

    APNumber  shift, and go to state 25

    $default  reduce using rule 32 (atomPrimativeTest)

    intNumber  go to state 50


state 14

   18 atomPrimativeTest: APDegree .
   19                  | APDegree . intNumber

    APNumber  shift, and go to state 25

    $default  reduce using rule 18 (atomPrimativeTest)

    intNumber  go to state 51


state 15

   24 atomPrimativeTest: APRingTest . APNumber

    APNumber  shift, and go to state 52


state 16

   25 atomPrimativeTest: APResidueTest . APNumber

    APNumber  shift, and go to state 53


state 17

   53 atomPrimativeTest: APOrganicElement .

    $default  reduce using rule 53 (atomPrimativeTest)


state 18

   54 atomPrimativeTest: APInorganicElement .

    $default  reduce using rule 54 (atomPrimativeTest)


state 19

   35 atomPrimativeTest: APElectronegativeElement .

    $default  reduce using rule 35 (atomPrimativeTest)


state 20

   34 atomPrimativeTest: APGroupNumber . intNumber

    APNumber  shift, and go to state 25

    intNumber  go to state 54


state 21

   36 atomPrimativeTest: APHeavyAtomTotalBond .
   37                  | APHeavyAtomTotalBond . intNumber

    APNumber  shift, and go to state 25

    $default  reduce using rule 36 (atomPrimativeTest)

    intNumber  go to state 55


state 22

   22 atomPrimativeTest: APImplicitHCount .
   23                  | APImplicitHCount . intNumber

    APNumber  shift, and go to state 25

    $default  reduce using rule 22 (atomPrimativeTest)

    intNumber  go to state 56


state 23

   55 atomPrimativeTest: APLonePair .
   56                  | APLonePair . intNumber

    APNumber  shift, and go to state 25

    $default  reduce using rule 55 (atomPrimativeTest)

    intNumber  go to state 57


state 24

   38 atomPrimativeTest: APNegativeCharge . intNumber
   39                  | APNegativeCharge .
   40                  | APNegativeCharge . APNegativeCharge
   41                  | APNegativeCharge . APNegativeCharge APNegativeCharge

    APNegativeCharge  shift, and go to state 58
    APNumber          shift, and go to state 25

    $default  reduce using rule 39 (atomPrimativeTest)

    intNumber  go to state 59


state 25

   64 intNumber: APNumber .

    $default  reduce using rule 64 (intNumber)


state 26

   59 logOp: APOperatorNot . logOp

    APAtomicNumber            shift, and go to state 10
    APChiralityAntiClockwise  shift, and go to state 11
    APChiralityClockwise      shift, and go to state 12
    APConnectivity            shift, and go to state 13
    APDegree                  shift, and go to state 14
    APRingTest                shift, and go to state 15
    APResidueTest             shift, and go to state 16
    APDollarSign              shift, and go to state 1
    APOrganicElement          shift, and go to state 17
    APInorganicElement        shift, and go to state 18
    APElectronegativeElement  shift, and go to state 19
    APGroupNumber             shift, and go to state 20
    APHeavyAtomTotalBond      shift, and go to state 21
    APImplicitHCount          shift, and go to state 22
    APLonePair                shift, and go to state 23
    APNegativeCharge          shift, and go to state 24
    APNumber                  shift, and go to state 25
    APOperatorNot             shift, and go to state 26
    APPiBondOrbital           shift, and go to state 27
    APAromaticPiElectron      shift, and go to state 28
    APPositiveCharge          shift, and go to state 29
    APRingMembershipCount     shift, and go to state 30
    APRingSize                shift, and go to state 31
    APTotalHCount             shift, and go to state 32
    APTransitionMetal         shift, and go to state 33
    APValence                 shift, and go to state 34
    APWildCard                shift, and go to state 35

    atomPrimativeTest  go to state 36
    logOp              go to state 60
    recursiveChemInfo  go to state 38
    intNumber          go to state 39


state 27

   48 atomPrimativeTest: APPiBondOrbital .

    $default  reduce using rule 48 (atomPrimativeTest)


state 28

   47 atomPrimativeTest: APAromaticPiElectron . intNumber

    APNumber  shift, and go to state 25

    intNumber  go to state 61


state 29

   42 atomPrimativeTest: APPositiveCharge . intNumber
   43                  | APPositiveCharge .
   44                  | APPositiveCharge . APPositiveCharge
   45                  | APPositiveCharge . APPositiveCharge APPositiveCharge

    APNumber          shift, and go to state 25
    APPositiveCharge  shift, and go to state 62

    $default  reduce using rule 43 (atomPrimativeTest)

    intNumber  go to state 63


state 30

   26 atomPrimativeTest: APRingMembershipCount .
   27                  | APRingMembershipCount . intNumber

    APNumber  shift, and go to state 25

    $default  reduce using rule 26 (atomPrimativeTest)

    intNumber  go to state 64


state 31

   28 atomPrimativeTest: APRingSize .
   29                  | APRingSize . intNumber

    APNumber  shift, and go to state 25

    $default  reduce using rule 28 (atomPrimativeTest)

    intNumber  go to state 65


state 32

   20 atomPrimativeTest: APTotalHCount .
   21                  | APTotalHCount . intNumber

    APNumber  shift, and go to state 25

    $default  reduce using rule 20 (atomPrimativeTest)

    intNumber  go to state 66


state 33

   46 atomPrimativeTest: APTransitionMetal . intNumber

    APNumber  shift, and go to state 25

    intNumber  go to state 67


state 34

   30 atomPrimativeTest: APValence .
   31                  | APValence . intNumber

    APNumber  shift, and go to state 25

    $default  reduce using rule 30 (atomPrimativeTest)

    intNumber  go to state 68


state 35

   17 atomPrimativeTest: APWildCard .

    $default  reduce using rule 17 (atomPrimativeTest)


state 36

   58 logOp: atomPrimativeTest .

    $default  reduce using rule 58 (logOp)


state 37

   11 acyclicAtomTest: APOpenBracket logOp . APCloseBracket
   60 logOp: logOp . APOperatorAndHigh logOp
   61      | logOp . APOperatorOr logOp
   62      | logOp . APOperatorAndLow logOp

    APCloseBracket     shift, and go to state 69
    APOperatorAndHigh  shift, and go to state 70
    APOperatorAndLow   shift, and go to state 71
    APOperatorOr       shift, and go to state 72


state 38

   57 atomPrimativeTest: recursiveChemInfo .

    $default  reduce using rule 57 (atomPrimativeTest)


state 39

   52 atomPrimativeTest: intNumber .

    $default  reduce using rule 52 (atomPrimativeTest)


state 40

    0 $accept: input $end .

    $default  accept


state 41

   14 atomTest: acyclicAtomTest APNumber .

    $default  reduce using rule 14 (atomTest)


state 42

    9 bondAtomTest: APBond . atomTest

    APDollarSign      shift, and go to state 1
    APOrganicElement  shift, and go to state 2
    APOpenBracket     shift, and go to state 3

    acyclicAtomTest    go to state 6
    atomTest           go to state 73
    recursiveChemInfo  go to state 8


state 43

   16 branch: APOpenParenthesis . chain APCloseParenthesis

    APBond             shift, and go to state 42
    APDollarSign       shift, and go to state 1
    APOrganicElement   shift, and go to state 2
    APOpenBracket      shift, and go to state 3
    APOpenParenthesis  shift, and go to state 43

    chain              go to state 74
    bondAtomTest       go to state 45
    acyclicAtomTest    go to state 6
    atomTest           go to state 46
    branch             go to state 47
    recursiveChemInfo  go to state 8


state 44

    4 chemInfo: atomTest chain .

    $default  reduce using rule 4 (chemInfo)


state 45

    5 chain: bondAtomTest . chain
    7      | bondAtomTest .

    APBond             shift, and go to state 42
    APDollarSign       shift, and go to state 1
    APOrganicElement   shift, and go to state 2
    APOpenBracket      shift, and go to state 3
    APOpenParenthesis  shift, and go to state 43

    $default  reduce using rule 7 (chain)

    chain              go to state 75
    bondAtomTest       go to state 45
    acyclicAtomTest    go to state 6
    atomTest           go to state 46
    branch             go to state 47
    recursiveChemInfo  go to state 8


state 46

   10 bondAtomTest: atomTest .

    $default  reduce using rule 10 (bondAtomTest)


state 47

    6 chain: branch . chain
    8      | branch .

    APBond             shift, and go to state 42
    APDollarSign       shift, and go to state 1
    APOrganicElement   shift, and go to state 2
    APOpenBracket      shift, and go to state 3
    APOpenParenthesis  shift, and go to state 43

    $default  reduce using rule 8 (chain)

    chain              go to state 76
    bondAtomTest       go to state 45
    acyclicAtomTest    go to state 6
    atomTest           go to state 46
    branch             go to state 47
    recursiveChemInfo  go to state 8


state 48

   63 recursiveChemInfo: APDollarSign APOpenParenthesis chemInfo . APCloseParenthesis

    APCloseParenthesis  shift, and go to state 77


state 49

   49 atomPrimativeTest: APAtomicNumber intNumber .

    $default  reduce using rule 49 (atomPrimativeTest)


state 50

   33 atomPrimativeTest: APConnectivity intNumber .

    $default  reduce using rule 33 (atomPrimativeTest)


state 51

   19 atomPrimativeTest: APDegree intNumber .

    $default  reduce using rule 19 (atomPrimativeTest)


state 52

   24 atomPrimativeTest: APRingTest APNumber .

    $default  reduce using rule 24 (atomPrimativeTest)


state 53

   25 atomPrimativeTest: APResidueTest APNumber .

    $default  reduce using rule 25 (atomPrimativeTest)


state 54

   34 atomPrimativeTest: APGroupNumber intNumber .

    $default  reduce using rule 34 (atomPrimativeTest)


state 55

   37 atomPrimativeTest: APHeavyAtomTotalBond intNumber .

    $default  reduce using rule 37 (atomPrimativeTest)


state 56

   23 atomPrimativeTest: APImplicitHCount intNumber .

    $default  reduce using rule 23 (atomPrimativeTest)


state 57

   56 atomPrimativeTest: APLonePair intNumber .

    $default  reduce using rule 56 (atomPrimativeTest)


state 58

   40 atomPrimativeTest: APNegativeCharge APNegativeCharge .
   41                  | APNegativeCharge APNegativeCharge . APNegativeCharge

    APNegativeCharge  shift, and go to state 78

    $default  reduce using rule 40 (atomPrimativeTest)


state 59

   38 atomPrimativeTest: APNegativeCharge intNumber .

    $default  reduce using rule 38 (atomPrimativeTest)


state 60

   59 logOp: APOperatorNot logOp .
   60      | logOp . APOperatorAndHigh logOp
   61      | logOp . APOperatorOr logOp
   62      | logOp . APOperatorAndLow logOp

    $default  reduce using rule 59 (logOp)


state 61

   47 atomPrimativeTest: APAromaticPiElectron intNumber .

    $default  reduce using rule 47 (atomPrimativeTest)


state 62

   44 atomPrimativeTest: APPositiveCharge APPositiveCharge .
   45                  | APPositiveCharge APPositiveCharge . APPositiveCharge

    APPositiveCharge  shift, and go to state 79

    $default  reduce using rule 44 (atomPrimativeTest)


state 63

   42 atomPrimativeTest: APPositiveCharge intNumber .

    $default  reduce using rule 42 (atomPrimativeTest)


state 64

   27 atomPrimativeTest: APRingMembershipCount intNumber .

    $default  reduce using rule 27 (atomPrimativeTest)


state 65

   29 atomPrimativeTest: APRingSize intNumber .

    $default  reduce using rule 29 (atomPrimativeTest)


state 66

   21 atomPrimativeTest: APTotalHCount intNumber .

    $default  reduce using rule 21 (atomPrimativeTest)


state 67

   46 atomPrimativeTest: APTransitionMetal intNumber .

    $default  reduce using rule 46 (atomPrimativeTest)


state 68

   31 atomPrimativeTest: APValence intNumber .

    $default  reduce using rule 31 (atomPrimativeTest)


state 69

   11 acyclicAtomTest: APOpenBracket logOp APCloseBracket .

    $default  reduce using rule 11 (acyclicAtomTest)


state 70

   60 logOp: logOp APOperatorAndHigh . logOp

    APAtomicNumber            shift, and go to state 10
    APChiralityAntiClockwise  shift, and go to state 11
    APChiralityClockwise      shift, and go to state 12
    APConnectivity            shift, and go to state 13
    APDegree                  shift, and go to state 14
    APRingTest                shift, and go to state 15
    APResidueTest             shift, and go to state 16
    APDollarSign              shift, and go to state 1
    APOrganicElement          shift, and go to state 17
    APInorganicElement        shift, and go to state 18
    APElectronegativeElement  shift, and go to state 19
    APGroupNumber             shift, and go to state 20
    APHeavyAtomTotalBond      shift, and go to state 21
    APImplicitHCount          shift, and go to state 22
    APLonePair                shift, and go to state 23
    APNegativeCharge          shift, and go to state 24
    APNumber                  shift, and go to state 25
    APOperatorNot             shift, and go to state 26
    APPiBondOrbital           shift, and go to state 27
    APAromaticPiElectron      shift, and go to state 28
    APPositiveCharge          shift, and go to state 29
    APRingMembershipCount     shift, and go to state 30
    APRingSize                shift, and go to state 31
    APTotalHCount             shift, and go to state 32
    APTransitionMetal         shift, and go to state 33
    APValence                 shift, and go to state 34
    APWildCard                shift, and go to state 35

    atomPrimativeTest  go to state 36
    logOp              go to state 80
    recursiveChemInfo  go to state 38
    intNumber          go to state 39


state 71

   62 logOp: logOp APOperatorAndLow . logOp

    APAtomicNumber            shift, and go to state 10
    APChiralityAntiClockwise  shift, and go to state 11
    APChiralityClockwise      shift, and go to state 12
    APConnectivity            shift, and go to state 13
    APDegree                  shift, and go to state 14
    APRingTest                shift, and go to state 15
    APResidueTest             shift, and go to state 16
    APDollarSign              shift, and go to state 1
    APOrganicElement          shift, and go to state 17
    APInorganicElement        shift, and go to state 18
    APElectronegativeElement  shift, and go to state 19
    APGroupNumber             shift, and go to state 20
    APHeavyAtomTotalBond      shift, and go to state 21
    APImplicitHCount          shift, and go to state 22
    APLonePair                shift, and go to state 23
    APNegativeCharge          shift, and go to state 24
    APNumber                  shift, and go to state 25
    APOperatorNot             shift, and go to state 26
    APPiBondOrbital           shift, and go to state 27
    APAromaticPiElectron      shift, and go to state 28
    APPositiveCharge          shift, and go to state 29
    APRingMembershipCount     shift, and go to state 30
    APRingSize                shift, and go to state 31
    APTotalHCount             shift, and go to state 32
    APTransitionMetal         shift, and go to state 33
    APValence                 shift, and go to state 34
    APWildCard                shift, and go to state 35

    atomPrimativeTest  go to state 36
    logOp              go to state 81
    recursiveChemInfo  go to state 38
    intNumber          go to state 39


state 72

   61 logOp: logOp APOperatorOr . logOp

    APAtomicNumber            shift, and go to state 10
    APChiralityAntiClockwise  shift, and go to state 11
    APChiralityClockwise      shift, and go to state 12
    APConnectivity            shift, and go to state 13
    APDegree                  shift, and go to state 14
    APRingTest                shift, and go to state 15
    APResidueTest             shift, and go to state 16
    APDollarSign              shift, and go to state 1
    APOrganicElement          shift, and go to state 17
    APInorganicElement        shift, and go to state 18
    APElectronegativeElement  shift, and go to state 19
    APGroupNumber             shift, and go to state 20
    APHeavyAtomTotalBond      shift, and go to state 21
    APImplicitHCount          shift, and go to state 22
    APLonePair                shift, and go to state 23
    APNegativeCharge          shift, and go to state 24
    APNumber                  shift, and go to state 25
    APOperatorNot             shift, and go to state 26
    APPiBondOrbital           shift, and go to state 27
    APAromaticPiElectron      shift, and go to state 28
    APPositiveCharge          shift, and go to state 29
    APRingMembershipCount     shift, and go to state 30
    APRingSize                shift, and go to state 31
    APTotalHCount             shift, and go to state 32
    APTransitionMetal         shift, and go to state 33
    APValence                 shift, and go to state 34
    APWildCard                shift, and go to state 35

    atomPrimativeTest  go to state 36
    logOp              go to state 82
    recursiveChemInfo  go to state 38
    intNumber          go to state 39


state 73

    9 bondAtomTest: APBond atomTest .

    $default  reduce using rule 9 (bondAtomTest)


state 74

   16 branch: APOpenParenthesis chain . APCloseParenthesis

    APCloseParenthesis  shift, and go to state 83


state 75

    5 chain: bondAtomTest chain .

    $default  reduce using rule 5 (chain)


state 76

    6 chain: branch chain .

    $default  reduce using rule 6 (chain)


state 77

   63 recursiveChemInfo: APDollarSign APOpenParenthesis chemInfo APCloseParenthesis .

    $default  reduce using rule 63 (recursiveChemInfo)


state 78

   41 atomPrimativeTest: APNegativeCharge APNegativeCharge APNegativeCharge .

    $default  reduce using rule 41 (atomPrimativeTest)


state 79

   45 atomPrimativeTest: APPositiveCharge APPositiveCharge APPositiveCharge .

    $default  reduce using rule 45 (atomPrimativeTest)


state 80

   60 logOp: logOp . APOperatorAndHigh logOp
   60      | logOp APOperatorAndHigh logOp .
   61      | logOp . APOperatorOr logOp
   62      | logOp . APOperatorAndLow logOp

    $default  reduce using rule 60 (logOp)


state 81

   60 logOp: logOp . APOperatorAndHigh logOp
   61      | logOp . APOperatorOr logOp
   62      | logOp . APOperatorAndLow logOp
   62      | logOp APOperatorAndLow logOp .

    APOperatorAndHigh  shift, and go to state 70
    APOperatorOr       shift, and go to state 72

    $default  reduce using rule 62 (logOp)


state 82

   60 logOp: logOp . APOperatorAndHigh logOp
   61      | logOp . APOperatorOr logOp
   61      | logOp APOperatorOr logOp .
   62      | logOp . APOperatorAndLow logOp

    APOperatorAndHigh  shift, and go to state 70

    $default  reduce using rule 61 (logOp)


state 83

   16 branch: APOpenParenthesis chain APCloseParenthesis .

    $default  reduce using rule 16 (branch)
